<resources>
    <string name="app_name">student_folder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Open_Drawer">Cajón de navegación abierto</string>
    <string name="Close_Drawer">Cerrar el cajón de navegación</string>

    <!--SettingsActivity-->
    <string name="settings">Configuración</string>
    <string name="more">Más</string>

    <!--themeMode-->
    <string name="themeMode">Modo oscuro</string>
    <string name="themeModeDesc">Activa el modo oscuro para una mejor experiencia</string>

    <!--cuenta google-->
    <string name="signOut">Cerrar sesión</string>
    <string name="signOutDesc">Cerrar sesión de la aplicación</string>

    <!--DriveActivity-->
    <string name="googleDrive">Google Drive</string>
    <string name="myFilesDrive">Mis archivos de Drive</string>
    <string name="listFiles">Lista de archivos</string>
    <string name="queryFiles">Consulta de archivos</string>
    <string name="createFileText">Crear archivo de texto</string>
    <string name="openFileText">Abrir archivo de texto</string>
    <string name="menu">Menú</string>

    <!--NoteActivity-->
    <string name="note">Mis notas</string>
    <string name="addNote">Agregar nota</string>
    <string name="noteDesc">Agregue, edite y elimine sus notas</string>
    <string name="setTitleNote">Presione para nombrar la nota</string>
    <string name="setDescriptionNote">Presione para escribir en la nota</string>
    <string name="title">Título</string>

    <!--MainActivity-->
    <string name="name">Nombre</string>

    <!--InternalFragmen-->
    <string name="microsoftTeams">Microsoft Teams</string>
    <string name="googleMeet">Google Meet</string>
    <string name="zoom">Zoom</string>



    <string name="text">Este es un texto Este es un texto Este es un texto Este es un texto</string>
</resources>