<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/screen"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            style="@style/imgButton"
            android:id="@+id/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="22dp"
            android:background="@drawable/ic_back_btn">
        </androidx.appcompat.widget.AppCompatImageButton>

        <TextView
            style="@style/textHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/settings">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:layout_marginHorizontal="22dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/themeMode">
            </TextView>

            <TextView
                style="@style/textMedium"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="14dp"
                android:text="@string/themeModeDesc">
            </TextView>
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </Space>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
        </androidx.appcompat.widget.SwitchCompat>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="13dp"
        android:layout_marginHorizontal="22dp">

            <TextView
                style="@style/textHigh"
                android:id="@+id/tv_signOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/signOut">
            </TextView>

            <TextView
                style="@style/textMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:textSize="14dp"
                android:text="@string/signOutDesc">
            </TextView>
    </LinearLayout>
</LinearLayout>